--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@svrooij/evohome": "^1.0.2"
+    "@svrooij/evohome": "^1.0.2",
+    "express": "^4.17.1"
   }
 }
