--- a/config/config.json
+++ b/config/config.json
@@ -11,7 +11,7 @@
     "username": "grosmar",
     "password": "",
     "database": "evohome-monitor",
-    "host": "localhost",
+    "host": "ec2-108-128-104-50.eu-west-1.compute.amazonaws.com",
     "dialect": "postgres",
     "operatorsAliases": false,
     "use_env_variable": "DATABASE_URL"
