--- a/config/config.json
+++ b/config/config.json
@@ -11,6 +11,7 @@
     "dialect": "postgres",
     "dialectOptions" : {
       "ssl" : {
+        "require": true,
         "rejectUnauthorized": false
     }
     },
