--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svrooij/evohome": "^1.0.2",
     "express": "^4.17.1",
+    "got": "^11.8.2",
     "heroku-keep-awake": "^1.1.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
